--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.3.0
   google_generative_ai: ^0.4.6
+  image_picker: ^1.1.2
+  percent_indicator: ^4.2.4
+  flutter_svg: ^2.0.17
+  dotted_border: ^2.1.0
+  lottie: ^3.3.1
 
 dev_dependencies:
   flutter_test:
